--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ version: "3.8"
 services:
   flask-app:
     image: mi-flask-app  # Usa el nombre de la imagen que creaste
-    container_name: flask-app
+    container_name: alealbaladejo/jenkins_ex:latest
     ports:
       - "5002:5002"  # Mapea el puerto del contenedor al host
     environment:
